--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,13 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Topic :: Scientific/Engineering :: Mathematics",
     "Topic :: Scientific/Engineering :: Physics",
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = "^3.11"
 numpy = "^1.21.0"
 pandas = "^1.3.0"
 plotly = "^5.0.0"
@@ -47,10 +44,10 @@ sandwich-demo = "sandwich_numerical.main:main"
 
 [tool.black]
 line-length = 88
-target-version = ['py38', 'py39', 'py310', 'py311']
+target-version = ['py311']
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
